<resources>
    <string name="app_name">ITSM Client</string>
    <string name="password">Password</string>
    <string name="don_t_have_account_sign_up">Don\'t have account? Sign Up</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="valid_email_error_text">Enter a valid email ID</string>
    <string name="valid_password_error_text">Min length: 8</string>
    <string name="statistics">Statistics</string>
    <string name="company">Company</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="passwords_dont_match">Passwords don\'t match</string>
    <string name="company_logo">company logo</string>
    <string name="home">Home</string>
    <string name="Welcome">Welcome</string>
    <string name="admin">Admin</string>
    <string name="signup">Sign Up</string>
    <string name="select_tier">Select Tier</string>
    <string name="add_configuration">Add configuration</string>
    <string name="set_configuration">Set Configuration</string>
    <string name="logout">Logout</string>
    <string name="no_data_to_display">No data to display.</string>
    <string name="report">Report</string>
    <string name="forgot_password_click_here_to_reset">Forgot password? Click here to reset</string>
    <string name="help">Help</string>
    <string name="profile">Profile</string>
    <string name="profile_photo">Profile photo</string>
    <string name="designation">Designation</string>
    <string name="change_password">Change Password</string>
    <string name="request_new_configuration">Request new configuration</string>
    <string name="new_password">New Password</string>
    <string name="old_password">Old Password</string>
    <string name="request_config">Request Config</string>
    <string name="current_configurations">Current Configurations</string>
    <string name="requested_configurations">Requested Configurations</string>
    <string name="no_requests_found">No requests found</string>
    <string name="no_configurations_found">No configurations found</string>
    <string name="delete_account">Delete Account</string>
    <string name="pending_request">Pending Request Details</string>
    <string name="no_pending_requests">No pending requests</string>
    <string name="fetching_your_request">Fetching your request…</string>

    <string-array name="designations">
        <item>CEO / MD</item>
        <item>HR Manager</item>
        <item>PHP Developer</item>
        <item>Project Manager</item>
        <item>General Manager</item>
        <item>Business Development Manager</item>
        <item>Internet Marketing Head</item>
        <item>Content Writer</item>
        <item>System Administrator</item>
    </string-array>

</resources>
